objects/ProgramRebateType.object
<CustomObject>
    <fields>
        <fullName>PMC_CLM_ParentRebateProgramOrder__c</fullName>
        <description>Backend Field Used by the CLM system to associate Rebate Programs Calculation fields with the correct Rebate Program data</description>
        <formula>RebateProgram.PMC_CLM_RebateProgramOrder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRebateProgramOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Forecasted_Quantity__c</fullName>
        <label>Forecasted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ProductFamily__c</fullName>
        <description>Captures Product Family to cater towards the SAP integration</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_ProductFamilies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Projected_Incentive__c</fullName>
        <label>Projected Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ZRS6</fullName>
                    <label>Blended</label>
                </value>
                <value>
                    <fullName>Cultivar - Performa</fullName>
                </value>
                <value>
                    <fullName>Cultivar - Performa Bio</fullName>
                </value>
                <value>
                    <fullName>Cultivar - Performance</fullName>
                </value>
                <value>
                    <fullName>Cultivar - Volume</fullName>
                </value>
                <value>
                    <fullName>ZRS3</fullName>
                    <label>Growth</label>
                </value>
                <value>
                    <fullName>ZRS1</fullName>
                    <label>Individual</label>
                </value>
                <value>
                    <fullName>ZRS2</fullName>
                    <label>Portfolio</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_ProgramRebateTypes</fullName>
        <filterScope>Everything</filterScope>
        <label>AllProgramRebateTypes</label>
    </listViews>
    <listViews>
        <fullName>My_ProgramRebateTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>MyProgramRebateTypes</label>
    </listViews>
    <recordTypes>
        <fullName>Exclusive_Space</fullName>
        <active>true</active>
        <label>Exclusive Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_SS_Brazil</fullName>
        <active>true</active>
        <label>Brazil</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMC_SS_NorthAmerica</fullName>
        <active>true</active>
        <label>North America</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Rebate_Type</fullName>
        <active>true</active>
        <label>Program Rebate Type</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PMC_SS_RestrictRebateTypeEdit</fullName>
        <active>true</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Type for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)
),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)
)
)
),

NOT(ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR( ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;),
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Under Revision&apos;) ),



OR((PRIORVALUE( PMC_SS_Projected_Incentive__c ) = PMC_SS_Projected_Incentive__c) ,ISBLANK(PMC_SS_Projected_Incentive__c)),

OR((PRIORVALUE( PMC_SS_Forecasted_Quantity__c ) = PMC_SS_Forecasted_Quantity__c) ,ISBLANK(PMC_SS_Forecasted_Quantity__c))


)</errorConditionFormula>
        <errorMessage>Rebate Type can’t be created/edited at this stage. Please Amend the Sales Agreement to make revisions to Rebate Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictRebateTypeModification</fullName>
        <active>true</active>
        <description>This Validation rule will not allow create/update on Program Rebate Type once the Rebate program is Inactive.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
OR(
ISPICKVAL( PRIORVALUE( Status ) , &apos;Inactive&apos;),
ISNEW()
),
ISPICKVAL( RebateProgram.Status , &apos;Inactive&apos;)
)</errorConditionFormula>
        <errorMessage>Cannot create/update Program Rebate Type once Rebate Program is Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PMC_SS_RestrictTest</fullName>
        <active>false</active>
        <description>This validation rule is used to restrict the user from editing or creating Rebate Type for Under Revision or Approved Sales Agreement.</description>
        <errorConditionFormula>AND(
NOT( $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c ) ,
NOT(
OR(
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Active&apos;) ,
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Activated&apos;)
),
AND(
ISCHANGED( Status ) ,
ISPICKVAL( Status , &apos;Inactive&apos;) ,
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Expired&apos;)
)
)
),

NOT(ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.Status , &apos;Cancelled&apos;)),
OR( ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Approved&apos;),
ISPICKVAL( RebateProgram.PMC_SS_SalesAgreement__r.PMC_SS_ApprovalStatus__c , &apos;Under Revision&apos;) )





)</errorConditionFormula>
        <errorMessage>TEST Rebate Type can’t be edited at this stage. Please Amend the Sales Agreement to make revisions to Rebate Type.</errorMessage>
    </validationRules>
</CustomObject>